--- a/data_cleaning/cleaning.ipynb
+++ b/data_cleaning/cleaning.ipynb
@@ -761,7 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '/Users/meetshah/Desktop/lyrics_gen/data_cleaning/new_data.csv'\n",
+    "file_path = 'new_data.csv'\n",
     "\n",
     "data.to_csv(file_path,index=False)"
    ]
